Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.6.0
-
None
-
Device: 5800
Qt source revision: fb65db54eb502f773eaa402e3aabfada585c4fd6 (4.6.0 branch)
Package: http://pepper.troll.no/s60prereleases/snapshots/qt-symbian-opensource-4.6.0-snapshot-20091123.exe
Theme: Greeny
-
d6f1feb5f0f639f9fb2deb5dc3758f5d6b7ad4d1, c85d85b2a63cdbcf607789ed94ab5e4ac7ee560d
Description
To reproduce:
- launch any app from fluidlauncher (for example fridgemagnets or saxbookmarks)
- switch to landscape mode
- note how the background is broken, it seems to be an offset or similar error
See attached screenshots