Fixing background painting after orientation switch.

Fixing previous fixes of QS60StylePrivate::setBackgroundTexture with
commit SHAs a80e58335e69c8ce96d1596e0ed2d14e424a0d5e and
d4089399a3ab7548a864d5a399e08df85c444783
Now, the palette gets the updated background brush and the palette is
actually set as application palette.

Also making sure that QS60StylePrivate::handleDynamicLayoutVariantSwitch
does the right things in the right order. So that Table headers are not
broken after orientaion switch.

Task-number: QTBUG-6125
Task-number: QT-1478