src/gui/styles/qs60style_s60.cpp
@@ -1324,9 +1324,9 @@ QS60Style::QS60Style()
 void QS60StylePrivate::handleDynamicLayoutVariantSwitch()
 {
     clearCaches(QS60StylePrivate::CC_LayoutChange);
+    setBackgroundTexture(qApp);
     setActiveLayout();
     refreshUI();
-    setBackgroundTexture(qApp);
     foreach (QWidget *widget, QApplication::allWidgets())
         widget->ensurePolished();
 }
